fix: permissions spacing x alignment

--- a/src/styles/views/Auth/view.module.sass
+++ b/src/styles/views/Auth/view.module.sass
@@ -79,11 +79,9 @@
 .Check
     display: flex
     align-items: center
-  
-.Check.Checked
-  svg
-    path:first-child
-      fill: #AB9DF2 !important
+    list-style: none
+    font-size: 0.875em
+    margin: .8em 0
 
 .AppInfo
   display: flex
